# server/src/main/kotlin/dev/afalabarce/wordlechains/api/controllers/features/words/WordController.kt
@@ -1,9 +1,13 @@
 package dev.afalabarce.wordlechains.api.controllers.features.words
 
+import dev.afalabarce.wordlechains.api.controllers.features.words.models.Word
+import dev.afalabarce.wordlechains.api.controllers.features.words.repository.addNewWord
 import dev.afalabarce.wordlechains.api.controllers.features.words.repository.availableLanguages
 import dev.afalabarce.wordlechains.api.controllers.features.words.repository.getAllWords
+import io.ktor.http.HttpStatusCode
 import io.ktor.server.response.respond
 import io.ktor.server.routing.RoutingCall
+import org.apache.http.HttpStatus
 import org.jetbrains.exposed.v1.jdbc.Database
 
 
@@ -18,4 +22,13 @@ suspend fun RoutingCall.getWords(database: Database){
 
 suspend fun RoutingCall.availableLanguages(database: Database){
     respond(database.availableLanguages())
+}
+
+suspend fun RoutingCall.addNewWord(database: Database, newWord: Word){
+
+    respond(
+        status =  if(database.addNewWord(newWord)) HttpStatusCode.OK else HttpStatusCode.BadRequest,
+        message = ""
+
+    )
 }
